asynchronous post method working

--- a/BackgroundTasks/app/src/main/res/layout/content_http.xml
+++ b/BackgroundTasks/app/src/main/res/layout/content_http.xml
@@ -20,6 +20,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05" />
     
+    <Button
+        android:id="@+id/button_http_loadData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/textView_http_title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="@string/http_buttonLoad"
+        android:onClick="onClickButtonLoad"/>
+    
     <ScrollView
         android:id="@+id/scrollView_http_content"
         android:layout_width="0dp"
@@ -28,7 +38,7 @@
         android:layout_marginRight="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView_http_title">
+        app:layout_constraintTop_toBottomOf="@id/button_http_loadData">
         
         <TextView
             android:id="@+id/textView_http_content"
