--- a/BackgroundTasks/app/src/main/res/layout/activity_main.xml
+++ b/BackgroundTasks/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClickButtonHttp"
-        android:text="@string/main_buttonUnit2"
+        android:text="@string/main_buttonHttp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
