all volley methods working

--- a/BackgroundTasks/app/src/main/res/layout/activity_main.xml
+++ b/BackgroundTasks/app/src/main/res/layout/activity_main.xml
@@ -17,5 +17,25 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.2" />
+    
+    <Button
+        android:id="@+id/button_main_volley"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClickButtonVolley"
+        android:text="@string/main_buttonVolley"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_main_http" />
+    
+    <Button
+        android:id="@+id/button_main_json"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/main_buttonJson"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_main_volley"
+        android:onClick="onClickButtonJson"/>
 
 </android.support.constraint.ConstraintLayout>
