--- a/BackgroundTasks/app/src/main/res/values/colors.xml
+++ b/BackgroundTasks/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="error">#D32F2F</color>
     <color name="notify">#212121</color>
     <color name="success">@color/accent</color>
+    <color name="background_content">#D1D1D1</color>
 </resources>
