--- a/BackgroundTasks/app/src/main/res/layout/content_top_json.xml
+++ b/BackgroundTasks/app/src/main/res/layout/content_top_json.xml
@@ -28,6 +28,7 @@
         android:text="@string/json_buttonGet"
         app:layout_constraintLeft_toRightOf="@id/textView_json_titleVerbs"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="onClickButtonGet"/>
 
 </android.support.constraint.ConstraintLayout>
