--- a/BackgroundTasks/app/src/main/res/layout/activity_main.xml
+++ b/BackgroundTasks/app/src/main/res/layout/activity_main.xml
@@ -32,10 +32,20 @@
         android:id="@+id/button_main_json"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickButtonJson"
         android:text="@string/main_buttonJson"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_main_volley"
-        android:onClick="onClickButtonJson"/>
+        app:layout_constraintTop_toBottomOf="@id/button_main_volley" />
+    
+    <Button
+        android:id="@+id/button_main_gson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClickButtonGson"
+        android:text="@string/main_buttonGson"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_main_json" />
 
 </android.support.constraint.ConstraintLayout>
