--- a/BackgroundTasks/app/src/main/res/layout/activity_main.xml
+++ b/BackgroundTasks/app/src/main/res/layout/activity_main.xml
@@ -47,5 +47,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_main_json" />
+    
+    <Button
+        android:id="@+id/button_main_openWeather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/main_buttonOpenWeather"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_main_gson"
+        android:onClick="onClickButtonOpenWeather"/>
 
 </android.support.constraint.ConstraintLayout>
