--- a/BackgroundTasks/app/src/main/res/layout/activity_main.xml
+++ b/BackgroundTasks/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.1" />
     
     <Button
         android:id="@+id/button_main_volley"
@@ -52,10 +52,20 @@
         android:id="@+id/button_main_openWeather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickButtonOpenWeather"
         android:text="@string/main_buttonOpenWeather"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_main_gson"
-        android:onClick="onClickButtonOpenWeather"/>
+        app:layout_constraintTop_toBottomOf="@id/button_main_gson" />
+    
+    <Button
+        android:id="@+id/button_main_provider"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/main_buttonProvider"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_main_openWeather"
+        android:onClick="onClickButtonProvider"/>
 
 </android.support.constraint.ConstraintLayout>
