--- a/EvaluacionFinal8P/app/src/main/res/values/styles.xml
+++ b/EvaluacionFinal8P/app/src/main/res/values/styles.xml
@@ -7,5 +7,18 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
     </style>
+    
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    
+    <style name="AppTheme.PopupOverlay" parent="AlertDialog.AppCompat.Light" />
+    
+    <style name="CustomNavDrawer" parent="AppTheme">
+        <item name="colorPrimary">@color/accent</item>
+    </style>
 
 </resources>
