--- a/EvaluacionFinal8P/app/src/main/res/layout/content_login.xml
+++ b/EvaluacionFinal8P/app/src/main/res/layout/content_login.xml
@@ -99,6 +99,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85" />
+        app:layout_constraintVertical_bias="0.85"
+        android:onClick="onClickButtonLogin"/>
 
 </android.support.constraint.ConstraintLayout>
