--- a/EvaluacionFinal8P/app/src/main/res/layout/card_student.xml
+++ b/EvaluacionFinal8P/app/src/main/res/layout/card_student.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:layout_margin="8dp">
+    android:layout_margin="4dp">
     
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -43,10 +43,9 @@
             android:id="@+id/textView_cardStudent_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:text="Test"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:textStyle="italic|bold"
+            android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/imageView_cardStudent_icon"
             app:layout_constraintTop_toBottomOf="@id/textView_cardStudent_name" />
