--- a/EvaluacionFinal8P/app/src/main/res/layout/content_main.xml
+++ b/EvaluacionFinal8P/app/src/main/res/layout/content_main.xml
@@ -8,6 +8,13 @@
     tools:context="com.exercises.sart1991.evaluacionfinal8p.ui.activity.main.MainActivity"
     tools:showIn="@layout/app_bar_main">
     
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_main_cardsContainer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
