--- a/EvaluacionFinal8P/app/src/main/res/layout/app_bar_main.xml
+++ b/EvaluacionFinal8P/app/src/main/res/layout/app_bar_main.xml
@@ -21,5 +21,16 @@
     </android.support.design.widget.AppBarLayout>
     
     <include layout="@layout/content_main" />
+    
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="@android:color/white"
+        android:layout_margin="16dp"
+        app:fabSize="normal"
+        android:onClick="onClickFab"/>
 
 </android.support.design.widget.CoordinatorLayout>
