--- a/EvaluacionFinal8P/app/src/main/res/values/styles.xml
+++ b/EvaluacionFinal8P/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
     
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     
-    <style name="AppTheme.PopupOverlay" parent="AlertDialog.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     
     <style name="CustomNavDrawer" parent="AppTheme">
         <item name="colorPrimary">@color/accent</item>
