--- a/EvaluacionFinal8P/app/src/main/res/layout/dialog_task.xml
+++ b/EvaluacionFinal8P/app/src/main/res/layout/dialog_task.xml
@@ -40,7 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/dialogTask_gradeHint"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            android:maxLength="3"/>
     
     </android.support.design.widget.TextInputLayout>
 
