animation made from animation resource

--- a/AnimationsGraphicsMultimedia/app/src/main/res/layout/activity_animation.xml
+++ b/AnimationsGraphicsMultimedia/app/src/main/res/layout/activity_animation.xml
@@ -25,7 +25,7 @@
         app:layout_constraintRight_toLeftOf="@+id/button_animation_animate2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95"
+        app:layout_constraintVertical_bias="0.8"
         android:onClick="onClickButtonAnimate"/>
     
     <Button
@@ -34,10 +34,31 @@
         android:layout_height="wrap_content"
         android:text="@string/animation_buttonSecond"
         app:layout_constraintLeft_toRightOf="@id/button_animation_animate1"
+        app:layout_constraintRight_toLeftOf="@+id/button_animation_third"
+        app:layout_constraintBottom_toBottomOf="@id/button_animation_animate1"
+        app:layout_constraintTop_toTopOf="@id/button_animation_animate1"
+        android:onClick="onClickButtonAnimate"/>
+    
+    <Button
+        android:id="@+id/button_animation_third"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/button_animation_animate2"
+        app:layout_constraintTop_toTopOf="@id/button_animation_animate1"
+        app:layout_constraintBottom_toBottomOf="@id/button_animation_animate1"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95"
+        android:text="@string/animation_buttonThird"
         android:onClick="onClickButtonAnimate"/>
 
+    
+    <Button
+        android:id="@+id/button_animation_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_animation_animate1"
+        android:text="@string/animation_buttonCancel"
+        android:onClick="onClickButtonAnimate"/>
+    
 </android.support.constraint.ConstraintLayout>
