--- a/AnimationsGraphicsMultimedia/app/src/main/res/animator/animation_ball.xml
+++ b/AnimationsGraphicsMultimedia/app/src/main/res/animator/animation_ball.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:ordering="sequentially">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
     <objectAnimator
-        android:duration="400"
+        android:duration="1000"
         android:propertyName="x"
-        android:valueTo="500" />
+        android:valueTo="500"
+        android:interpolator="@android:anim/bounce_interpolator"/>
     
     <objectAnimator
-        android:duration="400"
+        android:duration="1000"
         android:propertyName="y"
         android:valueTo="500" />
     
     <objectAnimator
         android:duration="1000"
         android:propertyName="alpha"
-        android:valueTo="0.5" />
+        android:valueTo="0.8" />
     
     <objectAnimator
         android:duration="1000"
         android:propertyName="scaleX"
-        android:valueTo="4" />
+        android:valueTo="2" />
     
     <objectAnimator
         android:duration="1000"
         android:propertyName="scaleY"
-        android:valueTo="4" />
+        android:valueTo="2" />
 </set>
