--- a/AnimationsGraphicsMultimedia/app/src/main/res/animator/animation_ball.xml
+++ b/AnimationsGraphicsMultimedia/app/src/main/res/animator/animation_ball.xml
@@ -2,9 +2,9 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <objectAnimator
         android:duration="1000"
+        android:interpolator="@android:anim/bounce_interpolator"
         android:propertyName="x"
-        android:valueTo="500"
-        android:interpolator="@android:anim/bounce_interpolator"/>
+        android:valueTo="500" />
     
     <objectAnimator
         android:duration="1000"
