--- a/AnimationsGraphicsMultimedia/app/src/main/res/layout/activity_animation.xml
+++ b/AnimationsGraphicsMultimedia/app/src/main/res/layout/activity_animation.xml
@@ -11,54 +11,63 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/ball_black_24dp"
-        android:tint="@color/colorAccent"/>
+        android:tint="@color/colorAccent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    
+    <ImageView
+        android:id="@+id/imageView_animation_animationBird"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/animation_bird"
+        app:layout_constraintBottom_toTopOf="@+id/button_animation_animate1"
+        app:layout_constraintLeft_toLeftOf="parent" />
     
     <Button
         android:id="@+id/button_animation_animate1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickButtonAnimate"
         android:text="@string/animation_buttonFirst"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/button_animation_animate2"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8"
-        android:onClick="onClickButtonAnimate"/>
+        app:layout_constraintVertical_bias="0.8" />
     
     <Button
         android:id="@+id/button_animation_animate2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickButtonAnimate"
         android:text="@string/animation_buttonSecond"
+        app:layout_constraintBottom_toBottomOf="@id/button_animation_animate1"
         app:layout_constraintLeft_toRightOf="@id/button_animation_animate1"
         app:layout_constraintRight_toLeftOf="@+id/button_animation_third"
-        app:layout_constraintBottom_toBottomOf="@id/button_animation_animate1"
-        app:layout_constraintTop_toTopOf="@id/button_animation_animate1"
-        android:onClick="onClickButtonAnimate"/>
+        app:layout_constraintTop_toTopOf="@id/button_animation_animate1" />
     
     <Button
         android:id="@+id/button_animation_third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/button_animation_animate2"
-        app:layout_constraintTop_toTopOf="@id/button_animation_animate1"
-        app:layout_constraintBottom_toBottomOf="@id/button_animation_animate1"
-        app:layout_constraintRight_toRightOf="parent"
+        android:onClick="onClickButtonAnimate"
         android:text="@string/animation_buttonThird"
-        android:onClick="onClickButtonAnimate"/>
-
+        app:layout_constraintBottom_toBottomOf="@id/button_animation_animate1"
+        app:layout_constraintLeft_toRightOf="@id/button_animation_animate2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/button_animation_animate1" />
+    
     
     <Button
         android:id="@+id/button_animation_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickButtonAnimate"
+        android:text="@string/animation_buttonCancel"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_animation_animate1"
-        android:text="@string/animation_buttonCancel"
-        android:onClick="onClickButtonAnimate"/>
-    
+        app:layout_constraintTop_toBottomOf="@id/button_animation_animate1" />
+
 </android.support.constraint.ConstraintLayout>
