--- a/EvaluacionFinal9/app/src/main/res/layout/fragment_image.xml
+++ b/EvaluacionFinal9/app/src/main/res/layout/fragment_image.xml
@@ -25,17 +25,26 @@
         android:text="@string/image_route"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/button_image_open"
-        app:layout_constraintTop_toBottomOf="@id/imageView_image_icon" />
+        app:layout_constraintTop_toBottomOf="@id/imageView_image_icon"
+        app:layout_constraintRight_toLeftOf="@+id/scrollView_image_path"/>
     
-    <TextView
-        android:id="@+id/textView_image_routeContainer"
-        android:layout_width="wrap_content"
+    <HorizontalScrollView
+        android:id="@+id/scrollView_image_path"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="@string/image_routeContainer"
         app:layout_constraintBottom_toBottomOf="@id/textView_image_route"
         app:layout_constraintLeft_toRightOf="@id/textView_image_route"
-        app:layout_constraintTop_toTopOf="@id/textView_image_route" />
+        app:layout_constraintTop_toTopOf="@id/textView_image_route"
+        app:layout_constraintRight_toRightOf="parent">
+    
+        <TextView
+            android:id="@+id/textView_image_routeContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/image_routeContainer"/>
+    
+    </HorizontalScrollView>
     
     <Button
         android:id="@+id/button_image_open"
