--- a/EvaluacionFinal10/app/src/main/res/layout/activity_maps.xml
+++ b/EvaluacionFinal10/app/src/main/res/layout/activity_maps.xml
@@ -15,8 +15,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            app:theme="@style/AppTheme.PopupOverlay"
-            app:background="@color/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:background="@color/colorPrimary"
             app:title="@string/main_toolbar_title"/>
         
     </android.support.design.widget.AppBarLayout>
