--- a/EvaluacionFinal11/app/src/main/res/layout/activity_main.xml
+++ b/EvaluacionFinal11/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:text="Bienvenido s tu Asistente de Seguridad"
+        android:text="@string/mainActivity_title"
         android:textAlignment="center"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView_contentActivity_mainIcon"/>
@@ -34,17 +36,23 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:text="Inicia sesion con tus redes sociales para empezar"
+        android:text="@string/mainActivity_subtitle"
         android:textAlignment="center"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView_mainActivity_title"/>
     
     <com.facebook.login.widget.LoginButton
+        xmlns:facebook="http://schemas.android.com/apk/res-auto"
         android:id="@+id/loginButton_mainActivity_facebook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        facebook:com_facebook_login_text="Iniciar Sesión"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView_mainActivity_subtitle"
@@ -55,6 +63,7 @@
         android:id="@+id/signIn_mainActivity_google"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/loginButton_mainActivity_facebook"
