--- a/EvaluacionFinal11/app/src/main/res/layout/activity_contacts.xml
+++ b/EvaluacionFinal11/app/src/main/res/layout/activity_contacts.xml
@@ -1,34 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.exercises.sart1991.evaluacionfinal11.ContactsActivity">
-
-    <TextView
-        android:id="@+id/textView_contactsActivity_subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Selecciona los contactos a los que deseas notificar en caso de emergencia: "
-        android:textAlignment="center"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:layout_margin="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <ListView
-        android:id="@+id/listView_contactsActivity_contacts"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:choiceMode="multipleChoiceModal"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/textView_contactsActivity_subtitle"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/fab"/>
+    tools:context="com.exercises.sart1991.evaluacionfinal11.ui.ContactsActivity">
+    
+    <include layout="@layout/content_activity_contacts"/>
     
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -38,7 +16,6 @@
         android:src="@drawable/ic_save"
         android:tint="@android:color/white"
         app:fabSize="normal"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_gravity="end|bottom"/>
     
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
