--- a/EvaluacionFinal11/app/src/main/res/layout/activity_content.xml
+++ b/EvaluacionFinal11/app/src/main/res/layout/activity_content.xml
@@ -1,63 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.exercises.sart1991.evaluacionfinal11.MainActivity">
+    tools:context="com.exercises.sart1991.evaluacionfinal11.ui.MainActivity">
     
-    <ImageView
-        android:id="@+id/imageView_contentActivity_mainIcon"
-        android:layout_width="0dp"
-        android:layout_height="160dp"
-        android:src="@drawable/ic_map"
-        android:tint="@color/colorAccent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
-    
-    <TextView
-        android:id="@+id/textView_contentActivity_welcome"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:text="Ha ingresado en asistente de seguridad como:"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:textAlignment="center"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView_contentActivity_mainIcon"/>
-    
-    <TextView
-        android:id="@+id/textView_contentActivity_email"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:text="nextu@gmail.com"
-        android:textAlignment="center"
-        android:ellipsize="end"
-        android:lines="1"
-        android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView_contentActivity_welcome"/>
-    
-    <TextView
-        android:id="@+id/textView_contentActivity_content"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:text="Desde este momento podrás ser alertado al ingresar, permanecer o salir de zonas inseguras"
-        android:textAlignment="center"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView_contentActivity_email"/>
+    <include layout="@layout/content_activity_content"/>
     
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -67,7 +16,6 @@
         android:src="@drawable/ic_settings"
         android:tint="@android:color/white"
         app:fabSize="normal"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_gravity="end|bottom"/>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
