--- a/EvaluacionFinal11/app/src/main/res/layout/content_activity_content.xml
+++ b/EvaluacionFinal11/app/src/main/res/layout/content_activity_content.xml
@@ -19,54 +19,44 @@
         app:layout_constraintVertical_bias="0.2" />
     
     <TextView
-        android:id="@+id/textView_mainActivity_title"
+        android:id="@+id/textView_contentActivity_welcome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:text="@string/mainActivity_title"
-        android:textAlignment="center"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:text="Ha ingresado en asistente de seguridad como:"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:textAlignment="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView_contentActivity_mainIcon"/>
     
     <TextView
-        android:id="@+id/textView_mainActivity_subtitle"
+        android:id="@+id/textView_contentActivity_email"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:text="nextu@gmail.com"
+        android:textAlignment="center"
+        android:ellipsize="end"
+        android:lines="1"
+        android:layout_marginTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView_contentActivity_welcome"/>
+    
+    <TextView
+        android:id="@+id/textView_contentActivity_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:text="@string/mainActivity_subtitle"
+        android:text="Desde este momento podrás ser alertado al ingresar, permanecer o salir de zonas inseguras"
         android:textAlignment="center"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView_mainActivity_title"/>
-    
-    <com.facebook.login.widget.LoginButton
-        xmlns:facebook="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/loginButton_mainActivity_facebook"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        facebook:com_facebook_login_text="Iniciar Sesión"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView_mainActivity_subtitle"
-        app:layout_constraintBottom_toTopOf="@+id/signIn_mainActivity_google"
-        app:layout_constraintVertical_chainStyle="packed"/>
+        app:layout_constraintTop_toBottomOf="@id/textView_contentActivity_email"/>
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/signIn_mainActivity_google"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loginButton_mainActivity_facebook"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-    
 </android.support.constraint.ConstraintLayout>
