--- a/EvaluacionFinal11/app/src/main/res/layout/content_activity_contacts.xml
+++ b/EvaluacionFinal11/app/src/main/res/layout/content_activity_contacts.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.exercises.sart1991.evaluacionfinal11.ui.ContactsActivity">
+    tools:context="com.exercises.sart1991.evaluacionfinal11.ui.activities.ContactsActivity">
     
     <TextView
         android:id="@+id/textView_contactsActivity_subtitle"
@@ -18,17 +18,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
     
-    <ListView
-        android:id="@+id/listView_contactsActivity_contacts"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_contactsActivity_contacts"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:choiceMode="multipleChoiceModal"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         app:layout_constraintTop_toBottomOf="@id/textView_contactsActivity_subtitle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/fab"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
     
 
 </android.support.constraint.ConstraintLayout>
