--- a/EvaluacionFinal12/app/src/main/res/values/colors.xml
+++ b/EvaluacionFinal12/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#9E9E9E</color>
     <color name="colorPrimaryDark">#616161</color>
     <color name="colorAccent">#0091EA</color>
+    <color name="colorBlack">#424242</color>
 </resources>
